# snake

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt
inc/: board.hpp  generation.hpp  location.hpp  moves.hpp  snake.hpp  snake_brain.hpp
src/: board.cpp  common.cpp  generation.cpp  main.cpp  snake.cpp  snake_brain.cpp
